<resources>
    <string name="app_name">Health Data Tracker</string>

    <string name="menu_item_dashboard">Dashboard</string>
    <string name="menu_item_categories">Categories</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_settings">Settings</string>
    <string name="new_counter_label_name">Name</string>
    <string name="new_counter_label_cancel" >Cancel</string>
    <string name="new_counter_label_create">Create</string>
    <string name="new_counter_label_update">Update</string>

</resources>