<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/trackingFragment"
        android:icon="@drawable/ic_timer_outline"
        android:title="@string/menu_item_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@id/categoriesListFragment"
        android:icon="@drawable/ic_categories"
        android:title="@string/menu_item_categories"
        app:showAsAction="always" />

    <item
        android:id="@id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_item_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_cog"
        android:title="@string/menu_item_settings"
        app:showAsAction="always" />

</menu>